# terminal_app

./: .gitignore  README.md  pyproject.toml
future/core/: __init__.py
src/terminal_app/env/: verify_ssl_certificate.py
src/terminal_app/google_sheets/: send_metrics.py
src/terminal_app/logging/: __init__.py
src/terminal_app/processing_utils/: default_stage.py  stage_utils.py  types.py  utils.py
src/terminal_app/request_utils/: __init__.py  curlify.py  proxy_utils.py  ssh_client.py
src/terminal_app/utils/: stdout_utils.py
terminal_app/env/: __init__.py  env.py  verify_ssl_certificate.py
terminal_app/google_sheets/: __init__.py  send_metrics.py
terminal_app/internet/: __init__.py  internet.py
terminal_app/logging/: logging.py
terminal_app/processing_utils/: __init__.py  core.py  default_stage.py  stage_utils.py  utils.py
terminal_app/request_utils/: __init__.py  proxy_utils.py
terminal_app/stats_utils/: __init__.py  mesh_stats.py  py_stats.py
terminal_app/utils/: __init__.py  decorators.py  utils.py
tests/: .terminal_app.env  .terminal_app.yaml  remote.py  test.ipynb  test_chrome.ipynb  test_config.ipynb  test_config.py  test_env.py  test_logging.py  test_utils.py
tests/configs/: .openai.yaml  .test_global.env  .test_global.yaml  test_global.json
tests/configs/global/: .openai.yaml  .terminal_global.env  .test_global.env  .test_global.yaml  config.yaml  remote.yaml  some_json.json
tests/configs/global/dataset/: mnist.yaml
tests/configs/global/experiment/: small.yaml
tests/configs/global/model/: cnn.yaml
tests/configs/global/optimizer/: adam.yaml
tests/configs/global/remotes/: local.yaml
tests/data/: data.json
tests/test_conf/: __main__.py  test_config.ipynb
tests/test_conf_w-o/: .terminal_app.env  test.py
