[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_app"
description = 'Library for terminal application'
readme = "README.md"
authors = [{ name = "Antonio Rodrigues", email = "axtonio.code@gmail.com" }]
keywords = ["terminal_app", "mipt"]
dependencies = [
	"tqdm",
	"certifi",
	"pydantic",
	"tabulate",
	"paramiko",
	"requests",
	"hydra-core",
	"python-dotenv",
	"pytest_is_running",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/axtonio/terminal_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal_app*"]

[tool.setuptools.package-data]
"*" = ['*.json']

[tool.setuptools.dynamic]
version = { attr = "terminal_app.__version__" }


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::pytest.PytestUnraisableExceptionWarning"]


[project.optional-dependencies]
request_utils = ["selenium", "selenium-wire", "paramiko"]
