[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_app"
description = 'Library for terminal application'
readme = "README.md"
authors = [{ name = "Antonio Rodrigues", email = "axtonio.code@gmail.com" }]
keywords = ["terminal_app", "mipt"]
dependencies = [
	"tqdm",
	"certifi",
	"natsort",
	"pydantic",
	"tabulate",
	"paramiko",
	"requests",
	"hydra-core",
	"python-dotenv",
	"pytest_is_running",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/axtonio/terminal_app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["terminal_app*"]

[tool.setuptools.dynamic]
version = { attr = "terminal_app.__version__" }


[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::pytest.PytestUnraisableExceptionWarning"]


[project.optional-dependencies]
request_utils = ["selenium", "selenium-wire", "paramiko"]
google_sheets = [
	"gspread",
	"pandas",
	"google-auth",
	"google-auth-oauthlib",
	"google-api-python-client",
	"gspread-dataframe",
	"gspread-formatting",
	"tenacity",
]
